# gwt

./: .coderabbit.yaml  .commitlintrc.json  .dockerignore  .eslintignore  .gitattributes  .gitignore  .gitignore.rust  .markdownlint.json  .markdownlintignore  .mcp.json  .npmignore  .pr-body.md  .prettierignore  .release-please-config.json  .release-please-manifest.json  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PLAN.md  PLANS.md  README.ja.md  README.md  bun.setup.ts  bunfig.toml  cliff.toml  clippy.toml  codecov.yml  commitlint.config.cjs  deny.toml  docker-compose.yml  eslint.config.js  marketplace.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  (+15 more)
crates/gwt/: Cargo.toml  build.rs
crates/gwt-agent/: Cargo.toml
crates/gwt-agent/src/: audit.rs  backend.rs  backend_store.rs  claude_capabilities.rs  custom.rs  detect.rs  environment.rs  launch.rs  legacy_recovery.rs  legacy_session.rs  lib.rs  migration.rs  prepare.rs  presets.rs  session.rs  store.rs  test_capture.rs  types.rs  version_cache.rs
crates/gwt-agent/tests/: launch_pipeline_test.rs
crates/gwt-ai/: Cargo.toml
crates/gwt-ai/src/: anthropic_backend.rs  branch_suggest.rs  client.rs  error.rs  issue_classify.rs  lib.rs  models_probe.rs  session_converter.rs  work_summary.rs
crates/gwt-ai/tests/: client_integration_test.rs
crates/gwt-cli/: Cargo.toml
crates/gwt-cli/src/: cli.rs  commands.rs  main.rs  tui.rs
crates/gwt-cli/tests/: e2e_migration_test.rs
crates/gwt-clipboard/: Cargo.toml
crates/gwt-clipboard/src/: file_paste.rs  lib.rs  text.rs
crates/gwt-config/: Cargo.toml
crates/gwt-config/src/: agent_config.rs  ai_settings.rs  atomic.rs  board_config.rs  error.rs  lib.rs  locale.rs  profile.rs  settings.rs  usage_config.rs  voice_config.rs
crates/gwt-config/tests/: settings_contract_test.rs
crates/gwt-core/: Cargo.toml  build.rs
crates/gwt-core/benches/: config_load.rs  git_ops.rs  worktree_ops.rs
crates/gwt-core/runtime/: chroma_index_runner.py  index_path_policy.json  project_index_requirements.txt  test_chroma_index_runner.py
crates/gwt-core/src/: board_remote_roots.rs  bounded_file.rs  config.rs  coordination.rs  daemon.rs  error.rs  errors.toml  execution_mode.rs  git.rs  index_coordinator.rs  lib.rs  lock.rs  notes.rs  operation_deadline.rs  paths.rs  process.rs  process_executor.rs  release_contract.rs  release_notes.rs  repo_hash.rs  runtime.rs  skill_state.rs  system_info.rs  test_support.rs  update.rs  work_events_intake.rs  work_projection.rs  workspace_projection.rs  workspace_projection_migration.rs  worktree.rs  worktree_hash.rs
crates/gwt-core/tests/: bare_workflow_test.rs  docker_integration_test.rs  index_coordinator.rs  index_path_policy.rs  index_paths.rs  index_runner_spawn.rs  issue_refresh.rs  logging_init.rs  migration_test.rs  migration_workflow_test.rs  no_direct_git_command.rs  process_adapter_parity.rs  process_console_filter.rs  recovery_attachments.rs  recovery_store.rs  repo_hash.rs  runtime_daemon_contract.rs  watcher_debounce.rs  windows_process_resolver.rs  workspace_projection.rs  worktree_gc.rs  worktree_hash.rs
crates/gwt-docker/: Cargo.toml
crates/gwt-docker/src/: compose.rs  container.rs  detect.rs  devcontainer.rs  lib.rs  port.rs
crates/gwt-docker/tests/: root_compose_contract_test.rs
crates/gwt-frontend/: Cargo.toml  Trunk.toml  index.html
crates/gwt-frontend/src/: lib.rs
crates/gwt-git/: Cargo.toml
crates/gwt-git/src/: blob.rs  branch.rs  branch_protection.rs  commit.rs  diff.rs  issue.rs  lib.rs  migration.rs  pr_status.rs  recovery.rs  refs.rs  repository.rs  worktree.rs
crates/gwt-git/tests/: github_project_clone_test.rs  migration_test.rs  recovery_base_pin_test.rs
crates/gwt-github/: Cargo.toml
crates/gwt-github/src/: body.rs  cache.rs  client.rs  issue_auto_claim.rs  lib.rs  migration.rs  routing.rs  sections.rs  spec_ops.rs  spec_structured.rs  spec_validate.rs
crates/gwt-github/tests/: body_test.rs  cache_test.rs  client_test.rs  http_client_test.rs  issue_auto_claim_test.rs  routing_test.rs  sections_test.rs  spec_ops_test.rs  spec_structured_test.rs
crates/gwt-notification/: Cargo.toml
crates/gwt-notification/src/: bus.rs  lib.rs  log.rs  notification.rs  severity.rs
crates/gwt-server/: Cargo.toml
crates/gwt-server/src/: error.rs  main.rs  server.rs  state.rs  ws.rs
crates/gwt-skills/: Cargo.toml
crates/gwt-skills/examples/: regenerate_hook_settings.rs
crates/gwt-skills/src/: assets.rs  codex_home.rs  codex_hook_trust.rs  coordination_guidance.rs  distribute.rs  git_exclude.rs  hooks.rs  lane.rs  lib.rs  provider_hooks.rs  registry.rs  session_kind.rs  settings_local.rs  validate.rs
crates/gwt-skills/tests/: managed_assets_contract_test.rs
crates/gwt-tauri/: Cargo.toml  Info.plist  tauri.conf.json
crates/gwt-tauri/capabilities/: default.json
crates/gwt-tauri/icons/: icon.icns
crates/gwt-tauri/src/: agent_logger.rs  agent_master.rs  agent_tools.rs  app.rs  assistant_engine.rs  assistant_monitor.rs  assistant_tools.rs  consultation.rs  context_summarizer.rs  http_server.rs  index_watcher.rs  main.rs  mcp_handlers.rs  mcp_ws_server.rs  menu.rs  pty_skills.rs  session_watcher.rs  single_instance.rs  state.rs  tool_helpers.rs
crates/gwt-terminal/: Cargo.toml
crates/gwt-terminal/src/: lib.rs  manager.rs  pane.rs  protocol.rs  pty.rs  runtime.rs  scrollback.rs  test_util.rs
crates/gwt-terminal/tests/: pty_lifecycle_test.rs  runtime_boundary_test.rs
crates/gwt-tui/: Cargo.toml
crates/gwt-tui/examples/: keytest.rs
crates/gwt-tui/src/: app.rs  board_watcher.rs  branch_cleanup.rs  cli.rs  compat.rs  custom_agents.rs  discussion_resume.rs  event.rs  ime_probe.rs  index_worker.rs  input_trace.rs  issue_cache.rs  lib.rs  main.rs  message.rs  model.rs  notification_router.rs  renderer.rs  scroll_debug.rs  specs_cache.rs  state.rs  theme.rs
crates/gwt-tui/tests/: cli_test.rs  hook_block_bash_policy_test.rs  hook_block_cd_test.rs  (+9 more)
crates/gwt-voice/: Cargo.toml
crates/gwt-web/: Cargo.toml
poc/terminal/: Cargo.toml
(+4567 files in other folders)
