[workspace]
resolver = "2"
members = [
    "crates/gwt-core",
    "crates/gwt-tauri",
]
default-members = [
    "crates/gwt-tauri",
]

[workspace.package]
version = "7.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/akiojin/gwt"
authors = ["akiojin"]

[workspace.dependencies]
# Internal crates
gwt-core = { path = "crates/gwt-core" }

# Error handling
thiserror = "2"

# Semver
semver = "1"

# Self-update payload extraction
flate2 = "1.0"
tar = "0.4"
zip = "2.4"

# Git operations
gix = { version = "0.78", default-features = false, features = [
    "blocking-network-client",
    "worktree-mutation",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
serde_json = "1"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# File locking
fs2 = "0.4"

# Terminal
portable-pty = "0.9"

# Testing
tempfile = "3"

# Benchmarks
criterion = { version = "0.8", features = ["html_reports"] }

# Utilities
directories = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"

# HTTP client (blocking)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Base64 encoding
base64 = "0.22"

# Home directory
dirs = "6"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true
