[workspace]
resolver = "2"
members = [
    "crates/gwt-core",
    "crates/gwt-tui",
]
default-members = [
    "crates/gwt-tui",
]

[workspace.package]
version = "8.17.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/akiojin/gwt"
authors = ["akiojin"]

[workspace.dependencies]
# Internal crates
gwt-core = { path = "crates/gwt-core" }

# TUI
ratatui = "0.29"

# Error handling
thiserror = "2"

# Semver
semver = "1"

# Self-update payload extraction
flate2 = "1.0"
tar = "0.4"
zip = "8.3"

# Git operations
gix = { version = "0.80", default-features = false, features = [
    "blocking-network-client",
    "worktree-mutation",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "1.0"
serde_json = "1"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
tracing-chrome = "0.7"

# File locking
fs2 = "0.4"

# Terminal
portable-pty = "0.9"

# Testing
tempfile = "3"

# Benchmarks
criterion = { version = "0.8", features = ["html_reports"] }

# Utilities
directories = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"

# HTTP client (blocking)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Base64 encoding
base64 = "0.22"

# Hashing
sha2 = "0.10"

# Home directory
dirs = "6"

# Path canonicalization (UNC-free on Windows)
dunce = "1"

# System information
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
nvml-wrapper = "0.12"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true
