[workspace]
resolver = "2"
members = [
    "crates/gwt",
    "crates/gwt-agent",
    "crates/gwt-ai",
    "crates/gwt-clipboard",
    "crates/gwt-config",
    "crates/gwt-core",
    "crates/gwt-docker",
    "crates/gwt-git",
    "crates/gwt-github",
    "crates/gwt-skills",
    "crates/gwt-terminal",
    "crates/gwt-voice",
]
default-members = [
    "crates/gwt",
]

[workspace.package]
version = "9.0.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/akiojin/gwt"
authors = ["akiojin"]

[workspace.dependencies]
# Internal crates
gwt-agent = { path = "crates/gwt-agent" }
gwt-ai = { path = "crates/gwt-ai" }
gwt-clipboard = { path = "crates/gwt-clipboard" }
gwt-config = { path = "crates/gwt-config" }
gwt-core = { path = "crates/gwt-core" }
gwt-docker = { path = "crates/gwt-docker" }
gwt-git = { path = "crates/gwt-git" }
gwt-github = { path = "crates/gwt-github" }
gwt-skills = { path = "crates/gwt-skills" }
gwt-terminal = { path = "crates/gwt-terminal" }
gwt-voice = { path = "crates/gwt-voice" }

# Error handling
thiserror = "2"

# Semver
semver = "1"

# Self-update payload extraction
flate2 = "1.0"
tar = "0.4"
zip = "8.2"

# Git operations
gix = { version = "0.80", default-features = false, features = [
    "blocking-network-client",
    "worktree-mutation",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "1.0"
serde_json = "1"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "chrono"] }
tracing-appender = "0.2"
tracing-chrome = "0.7"

# File locking
fs2 = "0.4"

# Terminal
portable-pty = "0.9"

# Testing
tempfile = "3"
insta = { version = "1", features = ["yaml"] }

# Benchmarks
criterion = { version = "0.8", features = ["html_reports"] }

# Embedded assets
include_dir = "0.7"

# Utilities
directories = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"

# HTTP client (blocking)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# WebSocket
tokio-tungstenite = "0.28"
futures-util = "0.3"

# Base64 encoding
base64 = "0.22"

# Hashing
sha2 = "0.10"

# Home directory
dirs = "6"

# Executable detection
which = "8"

# Path canonicalization (UNC-free on Windows)
dunce = "1"

# System information
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
nvml-wrapper = "0.12"

# File system watcher (gwt-spec issue)
notify = "8"
notify-debouncer-mini = "0.7"

# .gitignore filtering for the watcher
ignore = "0.4"

# Hex encoding for hash values
hex = "0.4"

# Regex (used by gwt-github section parser)
regex = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true
