[package]
name = "gwt-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Agent detection, launch, and session management for gwt"
publish = false

[dependencies]
gwt-core.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
which.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
