[package]
name = "gwt-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Configuration management for Git Worktree Manager"
publish = false

[dependencies]
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
