[package]
name = "gwt-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
dirs = "6"
which = "8"
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
semver = { workspace = true }
fs2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
ignore = { workspace = true }
dunce = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[build-dependencies]
serde_yaml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
# Exposes `gwt_core::test_support` (env lock + ScopedEnvVar) to dependent
# crates' tests. Enable from dev-dependencies only (SPEC-3016 FR-003).
test-support = []
