[package]
name = "gwt-github"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
gwt-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
