[package]
name = "gwt-notification"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Notification bus and structured logging for gwt"
publish = false

[dependencies]
tokio.workspace = true
chrono.workspace = true
serde.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
