[package]
name = "gwt-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Standalone HTTP/WebSocket server for gwt (Electron sidecar)"

[[bin]]
name = "gwt-server"
path = "src/main.rs"

[dependencies]
gwt-core = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = "6"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
