[package]
name = "gwt-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Tauri v2 GUI backend for Git Worktree Manager"
publish = false

[dependencies]
gwt-core.workspace = true
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
which = "8"
reqwest.workspace = true
dirs.workspace = true
whisper-rs = { version = "0.15.1", default-features = false }
hound = "3.5"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile.workspace = true
