[package]
name = "gwt-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Tauri v2 GUI backend for Git Worktree Manager"
publish = false

[dependencies]
gwt-core = { workspace = true, features = ["nvidia-gpu"] }
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
which = "8"
reqwest.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
libc.workspace = true
sha2.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
fs2.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile.workspace = true
