[package]
name = "gwt-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "PTY management, vt100 terminal emulation, and scrollback for gwt"
publish = false

[dependencies]
portable-pty.workspace = true
thiserror.workspace = true
tracing.workspace = true
vt100 = "0.16"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
serde_json.workspace = true
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[target.'cfg(unix)'.dev-dependencies]
libc.workspace = true
