[package]
name = "gwt-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Terminal UI for Git Worktree Manager"
publish = false

[[bin]]
name = "gwt-tui"
path = "src/main.rs"

[dependencies]
gwt-core = { workspace = true }
gwt-agent = { workspace = true }
gwt-ai = { workspace = true }
gwt-clipboard = { workspace = true }
gwt-config = { workspace = true }
gwt-docker = { workspace = true }
gwt-git = { workspace = true }
gwt-notification = { workspace = true }
gwt-skills = { workspace = true }
gwt-terminal = { workspace = true }
gwt-voice = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
tokio = { workspace = true }
vt100 = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
