[package]
name = "gwt-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Terminal UI for Git Worktree Manager"
publish = false

[[bin]]
name = "gwt-tui"
path = "src/main.rs"

[dependencies]
gwt-core = { workspace = true }
gwt-agent = { workspace = true }
gwt-ai = { workspace = true }
gwt-clipboard = { workspace = true }
gwt-config = { workspace = true }
gwt-docker = { workspace = true }
gwt-git = { workspace = true }
gwt-github = { workspace = true }
gwt-skills = { workspace = true }
gwt-terminal = { workspace = true }
gwt-voice = { workspace = true }
ratatui = "0.30"
crossterm = "0.29"
tokio = { workspace = true }
vt100 = "0.15"
regex = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
unicode-width = "0.2"
signal-hook = "0.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
