[package]
name = "gwt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Canvas-based floating terminal GUI for Git Worktree Manager"
publish = false
default-run = "gwt"

[[bin]]
name = "gwt"
path = "src/main.rs"

[[bin]]
name = "gwtd"
path = "src/bin/gwtd.rs"

[dependencies]
gwt-agent.workspace = true
gwt-ai.workspace = true
gwt-config.workspace = true
gwt-core.workspace = true
gwt-docker.workspace = true
gwt-git.workspace = true
gwt-github.workspace = true
gwt-skills.workspace = true
gwt-terminal.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
dunce.workspace = true
ignore.workspace = true
chrono.workspace = true
semver.workspace = true
toml.workspace = true
which.workspace = true
fs2.workspace = true
axum = { version = "0.8", features = ["ws"] }
# SPEC #2920 Phase 4: tray-icon needs a host event loop. `tao` provides
# the cross-platform NSApp / GTK / Windows message-pump glue. The wry
# WebView dependency was removed alongside the tray migration; muda is
# still pulled in transitively by tray-icon for menu construction.
tao = "0.35"
base64.workspace = true
regex.workspace = true
rfd = "0.17"
reqwest.workspace = true
sha2.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
chardetng.workspace = true
encoding_rs.workspace = true
pulldown-cmark.workspace = true
ammonia.workspace = true
tempfile.workspace = true
tray-icon = "0.19"
auto-launch = "0.5"
whoami = "1.5"
# SPEC #2920 Phase 4: the tray-icon crate needs RGBA bytes, so decode the
# embedded `assets/icons/icon.png` at runtime via `image` on every host
# OS. The legacy Windows/Linux-only gate stayed when the GUI route only
# attached the icon to a `tao::Window`; the tray-resident process needs
# it on macOS too.
image.workspace = true

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
tracing-subscriber.workspace = true

[package.metadata.bundle]
name = "GWT"
identifier = "io.github.akiojin.gwt"
category = "Developer Tool"
short_description = "Canvas-based floating terminal GUI"
long_description = """
Canvas-based floating terminal GUI for launching shells and coding agents.
"""
