[package]
name = "gwt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Canvas-based floating terminal GUI for Git Worktree Manager"
publish = false
default-run = "gwt"

[[bin]]
name = "gwt"
path = "src/main.rs"

[[bin]]
name = "gwtd"
path = "src/bin/gwtd.rs"

[dependencies]
gwt-agent.workspace = true
gwt-ai.workspace = true
gwt-config.workspace = true
gwt-core.workspace = true
gwt-docker.workspace = true
gwt-git.workspace = true
gwt-github.workspace = true
gwt-clipboard.workspace = true
gwt-skills.workspace = true
gwt-terminal.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
dunce.workspace = true
ignore.workspace = true
chrono.workspace = true
semver.workspace = true
toml.workspace = true
which.workspace = true
fs2.workspace = true
axum = { version = "0.8", features = ["ws"] }
# SPEC #2920 Phase 4: tray-icon needs a host event loop. `tao` provides
# the cross-platform NSApp / GTK / Windows message-pump glue. The wry
# WebView dependency was removed alongside the tray migration; muda is
# still pulled in transitively by tray-icon for menu construction.
tao = "0.35"
base64.workspace = true
regex.workspace = true
rfd = "0.17"
reqwest.workspace = true
sha2.workspace = true
hex.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
chardetng.workspace = true
encoding_rs.workspace = true
pulldown-cmark.workspace = true
ammonia.workspace = true
tempfile.workspace = true
sysinfo.workspace = true
tray-icon = "0.24"
auto-launch = "0.5"
whoami = "2.1"
# SPEC #2920 Phase 4: the tray-icon crate needs RGBA bytes, so decode the
# embedded `assets/icons/icon.png` at runtime via `image` on every host
# OS. The legacy Windows/Linux-only gate stayed when the GUI route only
# attached the icon to a `tao::Window`; the tray-resident process needs
# it on macOS too.
image.workspace = true

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

# SPEC #2920 Phase 12: macOS Login Items display-name fix. On macOS 13+ the
# autostart entry is registered through the modern `SMAppService` API so the
# System Settings background/login list attributes it to the app bundle and
# shows "GWT" instead of the Developer ID team name. macOS 12 and earlier keep
# the `auto-launch` LaunchAgent path. `NSError` is enabled so register /
# unregister failures surface a real message instead of a silent fallback.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3", features = ["NSError"] }
objc2-service-management = { version = "0.3", features = ["SMAppService", "objc2-foundation"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
tracing-subscriber.workspace = true
# SPEC-3016 FR-003: shared test helpers live in gwt-core::test_support; the
# feature is test-only and never ships.
gwt-core = { workspace = true, features = ["test-support"] }

[package.metadata.bundle]
name = "GWT"
identifier = "io.github.akiojin.gwt"
category = "Developer Tool"
short_description = "Canvas-based floating terminal GUI"
long_description = """
Canvas-based floating terminal GUI for launching shells and coding agents.
"""
