[package]
name = "poc-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Canvas-based floating terminal GUI PoC"
publish = false
default-run = "poc-terminal"

[[bin]]
name = "poc-terminal"
path = "src/main.rs"

[dependencies]
gwt-agent.workspace = true
gwt-core.workspace = true
gwt-docker.workspace = true
gwt-git.workspace = true
gwt-skills.workspace = true
gwt-terminal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio.workspace = true
futures-util.workspace = true
dunce.workspace = true
ignore.workspace = true
chrono.workspace = true
semver.workspace = true
toml.workspace = true
axum = { version = "0.8", features = ["ws"] }
wry = "0.55"
tao = "0.35"
base64.workspace = true
rfd = "0.15"
which.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.17"

[dev-dependencies]
tempfile.workspace = true
reqwest.workspace = true

[package.metadata.bundle]
name = "GWT Terminal PoC"
identifier = "io.github.akiojin.gwt.pocterminal"
category = "Developer Tool"
short_description = "Canvas-based floating terminal GUI PoC"
long_description = """
Canvas-based floating terminal GUI PoC for launching shells and coding agents.
"""
