[package]
name = "gwt-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core library for Git Worktree Manager"

[dependencies]
thiserror.workspace = true
gix.workspace = true
tokio.workspace = true
figment.workspace = true
serde.workspace = true
toml.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
fs2.workspace = true
directories.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait = "0.1"
which = "7"

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "git_ops"
harness = false

[[bench]]
name = "worktree_ops"
harness = false

[[bench]]
name = "config_load"
harness = false
